tests/neg-custom-args/captures/leaked-curried.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/leaked-curried.scala:11:10 -----------------------------
11 |    class Fuzz extends Box, caps.Pure: // error
   |    ^
   |Reference `any` is not included in the allowed capture set {} of the self type of class Fuzz.
   |
   |where:    any is a root capability created in class Fuzz when constructing instance Fuzz with contributing field val get
   |
12 |      self =>
13 |      val get: () ->{} () ->{io} Cap^ =
14 |        () => () => io
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/leaked-curried.scala:15:10 -----------------------------
15 |    class Foo extends Box, caps.Pure: // error
   |    ^
   |Reference `any` is not included in the allowed capture set {} of the self type of class Foo.
   |
   |where:    any is a root capability created in class Foo when constructing instance Foo with contributing field val get
   |
16 |      val get: () ->{} () ->{io} Cap^ =
17 |        () => () => io
